# DARTTesting

osgMinitaur/: AbstractMotor.h  Arduino.h  Bound.cpp  Bound.h  CMakeCache.txt  CMakeLists.txt  Dig.cpp  Dig.h  Findlibcmaes.cmake  Flip.cpp  Flip.h  HAL.cpp  HAL.h  IMUObject.cpp  IMUObject.h  Makefile  MinitaurEventHandler.cpp  MinitaurLeg.cpp  MinitaurWorldNode.cpp  MinitaurWorldNode.hpp  Motor.cpp  Motor.h  RSUJump.h  Remote.cpp  Remote.h  ReorientableBehavior.h  SoftStart.h  State.cpp  VirtualLeg.h  WMath.cpp  WMath.h  Walk.cpp  computeCost.h  main.cpp  minitaurDARTInterface.cpp  minitaurDARTInterface.h  minitaurDARTInterfaceCopy.h  minitaur_gaits_pp.ino  motorunit.urdf  osgMinitaur  (+5 more)
osgMinitaur/BulkSerial/: BulkSerial.cpp  BulkSerial.h
osgMinitaur/Encoder/: Encoder.h
osgMinitaur/IMU/: EKF.cpp  OrientationFilter.h
osgMinitaur/MotorController/: SagittalPair.h
osgMinitaur/PacketParser/: PacketParser.h
osgMinitaur/cmake/Modules/: Findlibcmaes.cmake
osgMinitaur/data/: Makefile
osgMinitaur/libraries/EEPROM/: eeprom_stm32.c
osgMinitaur/libraries/Encoder/: AS5047.h  Encoder.cpp
osgMinitaur/libraries/IMU/: ComplementaryFilter.h  IMU.h  MPU6000.cpp  MPU6000.h
osgMinitaur/libraries/MotorController/: AbstractMotor.h  MinitaurLeg.cpp  Motor.cpp  Motor.h
osgMinitaur/libraries/Nunchuck/: Nunchuck.cpp
osgMinitaur/osgMinitaur/: Arduino.h  Bound.cpp  CMakeLists.txt  Dig.cpp  HAL.cpp  MinitaurWorldNode.cpp  MinitaurWorldNode.hpp  Pan.h  Peripheral.h  RSUJump.cpp  RSUJump.h  ReorientableBehavior.h  WMath.cpp  WMath.h  Walk.h  pushWalk.h  traj.h  wiring_constants.h
(+62 files in other folders)
